Se soluciono error en controlador de la imagen